src/test/deca/context/valid/initialization/variable-exp.deca
// Description:
//    Déclaration correcte d'une variable avec une initialisation par expression
// Résultats :
//    Aucun problème de syntaxe ou de contexte
//
// Historique :
//    créé le 11/01/2025
{
    int y = 5 + 3;
}