src/test/deca/context/invalid/object/class-not-found.deca
// Description :
//  Appel de méthode sur une classe non définie.
// Résultats :
//    Erreur : Class 'UndefinedClass' not found.
// Historique :
//    créé le 19/01/2025
{
    UndefinedClass obj = new UndefinedClass();
    obj.someMethod(); 
}